# STL-ext

./: .gitignore  .gitmodules  CHAGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  defs.hpp  future_libs.yaml  iostream_pp.hpp  iostream_pp_ut.cpp  simple_namespace_library.hpp  temp_lib.hpp  temp_lib_ut.cpp
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  greetings.yml
containers/: Char.hpp
includes/algorithms/: searching.hpp  sorting.hpp
includes/containers/: Char.hpp  Object.hpp
includes/math/: Equations.hpp  mathfwd.hpp
tests/: iostream_pp_ut.cpp  temp_lib_ut.cpp
tests/algorithms/: sorting.cpp
tests/examples/: Char_example.cpp  Makefile
